# zqxjkcrud

./: .checkstyle  .fbExcludeFilterFile  .gitignore  .pmd  .pmdruleset.xml  .project  .travis.yml  Containerfile  Dockerfile  HELM.md  README  README.md  build.py  checkstyle.xml  pom.xml  run-with-podman  spotbugs-exclude.xml
.github/: dependabot.yml
.github/workflows/: ci.yml  manifest-builder-check.yml
charts/zqxjkcrud/: Chart.yaml  requirements.yaml  values.yaml
charts/zqxjkcrud/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
charts/zqxjkcrud/templates/tests/: test-connection.yaml
manifest-builder/: Cargo.toml  sample-definition.yaml  sample-manifests.yaml
manifest-builder/src/: main.rs
src/main/java/net/pdp7/zqxjkcrud/: ZqxjkCrudApp.java  ZqxjkCrudException.java
src/main/java/net/pdp7/zqxjkcrud/dao/: CatalogRepository.java  Dao.java  Field.java  Row.java  Table.java  Update.java
src/main/java/net/pdp7/zqxjkcrud/mvc/: ZqxjkCrudController.java
src/main/java/net/pdp7/zqxjkcrud/security/: SamlConfiguration.java  UserDetailsService.java  UserDetailsServiceImpl.java
src/main/java/net/pdp7/zqxjkcrud/utils/: MapUtils.java
src/main/resources/: application.properties
src/main/resources/sample/: schema.sql
src/main/resources/static/: style.css
src/main/resources/templates/: index.html  layout.html  row.html  table.html  widget-boolean.html  widget-date.html  widget-default.html  widget-number.html  widget-textarea.html  widget-timestamp.html
src/test/java/net/pdp7/zqxjkcrud/: ProxyTest.java  SmokeTest.java
